--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,4 @@
 {
+  "terminal.explorerKind": "external",
+  "terminal.integrated.automationShell.windows": "C:\\Program Files\\Git\\git-bash.exe"
 }
