--- a/pooler_manager/pubspec.yaml
+++ b/pooler_manager/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  desktop_window: ^0.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
