created text message  verification form

--- a/verus_verisig/android/app/src/main/AndroidManifest.xml
+++ b/verus_verisig/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.verus_verisig">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="verus_verisig"
         android:icon="@mipmap/ic_launcher">
