--- a/verus_verisig/pubspec.yaml
+++ b/verus_verisig/pubspec.yaml
@@ -30,10 +30,12 @@ dependencies:
   cupertino_icons: ^1.0.1
   font_awesome_flutter: ^8.10.0
   http: ^0.12.2
+  provider: ^4.3.2+3
 
 dev_dependencies:
-  flutter_test:
+  flutter_driver:
     sdk: flutter
+  test: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
