--- a/verus_verify/pubspec.yaml
+++ b/verus_verify/pubspec.yaml
@@ -35,9 +35,9 @@ dependencies:
   crypto: ^2.1.5
 
 dev_dependencies:
-  flutter_driver:
-    sdk: flutter
-  test: any
+  # flutter_driver:
+    # sdk: flutter
+  # test: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
